test/asm/interpolation-after-string.asm
def hello = $11
def goodbye = $22

def greeting equs "hello"
println ""{greeting}

def string equs "\"goodbye\""
println ""{goodbye}""
